Various Selenium fixes (timing, TinyMCE script)

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
@@ -264,9 +264,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Purpose of grant is to determine the appropriate environment, physical activity, and diet for primates as they age.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Purpose of grant is to determine the appropriate environment, physical activity, and diet for primates as they age.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -324,9 +324,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>$1,234,567</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('$1,234,567')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -354,9 +354,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>$999,999</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('$999,999')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -384,9 +384,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>1234-5678</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('1234-5678')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -517,9 +517,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>P999-1234</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('P999-1234')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
