--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
@@ -266,9 +266,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Animal Diet</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Animal Diet')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
