--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLibrarian.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLibrarian.html
@@ -123,9 +123,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Assistant Librarian</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Assistant Librarian')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
