--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
@@ -184,9 +184,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>The Primate College of America is a privately-funded college for the study of primates.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('The Primate College of America is a privately-funded college for the study of primates.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1126,9 +1126,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>PCoA</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('PCoA')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1161,9 +1161,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Gorillas</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Gorillas')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
