--- a/utilities/acceptance-tests/suites/AddPublications/AddArticle.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddArticle.html
@@ -232,9 +232,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>ABC111222333</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('ABC111222333')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -262,9 +262,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>DEF12121212</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('DEF12121212')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -292,9 +292,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>NIH9898989898</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('NIH9898989898')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -322,9 +322,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>PMID767676</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('PMID767676')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -417,9 +417,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Children</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Children')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -447,9 +447,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Games</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Games')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -477,9 +477,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>987654321.1234567890</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('987654321.1234567890')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
