--- a/utilities/acceptance-tests/suites/AddPublications/AddBook.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddBook.html
@@ -277,9 +277,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Children</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Children')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -307,9 +307,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Games</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Games')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -337,9 +337,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>5555555555</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('5555555555')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -367,9 +367,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>7777777777777</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('7777777777777')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -397,9 +397,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>258</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('258')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
