--- a/utilities/acceptance-tests/suites/AddPublications/AddChapter.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddChapter.html
@@ -217,9 +217,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>13</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('13')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -312,9 +312,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Children</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Children')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -342,9 +342,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Games</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Games')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
