--- a/utilities/acceptance-tests/suites/AddPublications/AddConference.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddConference.html
@@ -267,9 +267,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Children</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Children')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -297,9 +297,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Games</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Games')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
