--- a/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
+++ b/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
@@ -1020,9 +1020,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>This is a chapter in a book that provides various professional viewpoints as to the impact of Nintendo usage on kids.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('This is a chapter in a book that provides various professional viewpoints as to the impact of Nintendo usage on kids.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1143,7 +1143,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Add an entry to: status</td>
+	<td>Add an entry of type status</td>
 	<td></td>
 </tr>
 <tr>
@@ -1168,7 +1168,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Add an entry to: status</td>
+	<td>Add an entry of type status</td>
 	<td></td>
 </tr>
 <tr>
@@ -1476,11 +1476,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
 	<td>assertTitle</td>
 	<td>Nintendo O.K. for Kids</td>
 	<td></td>
@@ -1511,9 +1506,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>1234-5678-90</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('1234-5678-90')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1552,11 +1547,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
-<tr>
 	<td>assertTitle</td>
 	<td>Nintendo O.K. for Kids</td>
 	<td></td>
@@ -1587,9 +1577,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>123456789</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('123456789')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1623,11 +1613,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
-<tr>
 	<td>assertTitle</td>
 	<td>Nintendo O.K. for Kids</td>
 	<td></td>
@@ -1648,9 +1633,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>22</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('22')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1835,11 +1820,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
 	<td>assertTitle</td>
 	<td>Nintendo O.K. for Kids</td>
 	<td></td>
@@ -1870,9 +1850,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Children</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Children')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
