--- a/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications.html
@@ -167,9 +167,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>111</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('111')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -197,9 +197,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>119</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('119')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -252,9 +252,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>9</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('9')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -282,9 +282,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>2</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('2')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -434,9 +434,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>222</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('222')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -464,9 +464,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>229</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('229')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -519,9 +519,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>12</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('12')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -549,9 +549,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>4</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('4')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -676,9 +676,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>345</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('345')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -706,9 +706,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>367</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('367')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -761,9 +761,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>55</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('55')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -791,9 +791,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>1</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('1')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -938,9 +938,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>990</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('990')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -968,9 +968,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>994</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('994')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1023,9 +1023,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>23</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('23')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1053,9 +1053,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>4</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('4')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
