--- a/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications2.html
+++ b/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications2.html
@@ -178,9 +178,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>456</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('456')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -208,9 +208,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>468</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('468')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -263,9 +263,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>15</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('15')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -293,9 +293,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>8</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('8')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
