--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
@@ -222,9 +222,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>New York</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('New York')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -344,9 +344,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>111</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('111')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -374,9 +374,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>222</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('222')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -531,9 +531,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>333</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('333')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -561,9 +561,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>9</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('9')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -591,9 +591,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>444</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('444')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
