--- a/utilities/acceptance-tests/suites/CreateAccounts/CreateNewFacultyMember.html
+++ b/utilities/acceptance-tests/suites/CreateAccounts/CreateNewFacultyMember.html
@@ -193,9 +193,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Assistant Professor</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Assistant Professor')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
