--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
@@ -342,9 +342,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I am named after Jane in the Tarzan stories.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I am named after Jane in the Tarzan stories.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -735,9 +735,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I study monkeys, of course.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I study monkeys, of course.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -765,9 +765,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Apes</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Apes')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -841,9 +841,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I teach monkeys to communicate.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I teach monkeys to communicate.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -877,9 +877,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I travel the country teaching monkeys in zoos how to communicate.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I travel the country teaching monkeys in zoos how to communicate.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1460,9 +1460,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>123456789</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('123456789')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1490,9 +1490,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>5678</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('5678')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1550,9 +1550,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>ABC123987</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('ABC123987')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1580,9 +1580,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>976976976976</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('976976976976')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
