--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
@@ -427,9 +427,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>67676767</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('67676767')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -457,9 +457,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>987654321</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('987654321')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -487,9 +487,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>African Primates</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('African Primates')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -518,9 +518,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>ABC123987</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('ABC123987')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -549,9 +549,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>2727272727272727</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('2727272727272727')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
