--- a/utilities/acceptance-tests/suites/CreateProperties/AddMuseumArchDetails.html
+++ b/utilities/acceptance-tests/suites/CreateProperties/AddMuseumArchDetails.html
@@ -133,9 +133,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>This is an ugly building!</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('This is an ugly building!')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
