--- a/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy2.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy2.html
@@ -381,9 +381,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Eddie is able to edit Lily's profile.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Eddie is able to edit Lily's profile.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -466,9 +466,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Eddie is able to edit Jane's profile.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Eddie is able to edit Jane's profile.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -592,9 +592,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Polly is able to edit Jane's profile too.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Polly is able to edit Jane's profile too.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
