--- a/utilities/acceptance-tests/suites/SearchTextDiscovery/TextDiscovery.html
+++ b/utilities/acceptance-tests/suites/SearchTextDiscovery/TextDiscovery.html
@@ -187,9 +187,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>seeker of truth</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('seeker of truth')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
