--- a/utilities/acceptance-tests/suites/SelfEditing/CheckSelfEditorPrivileges.html
+++ b/utilities/acceptance-tests/suites/SelfEditing/CheckSelfEditorPrivileges.html
@@ -96,9 +96,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I am updating my own profile.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I am updating my own profile.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
