--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
@@ -179,9 +179,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Learn the basics about the general health of primates.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Learn the basics about the general health of primates.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -596,9 +596,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>ME Tarzan at metarzan@primates.edu or 555-555-5553</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('ME Tarzan at metarzan@primates.edu or 555-555-5553')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -712,9 +712,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>9</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('9')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
