--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
@@ -184,9 +184,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>First annual conference for those interested in the general health of primates.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('First annual conference for those interested in the general health of primates.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -279,9 +279,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>info@primateconf.org</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('info@primateconf.org')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -639,9 +639,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>PrimHConf</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('PrimHConf')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
