--- a/utilities/acceptance-tests/suites/CreateAccounts/CreateNewProxyEditor.html
+++ b/utilities/acceptance-tests/suites/CreateAccounts/CreateNewProxyEditor.html
@@ -118,9 +118,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Administrative Assistant</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Administrative Assistant')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
