--- a/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
@@ -242,9 +242,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I am named after Jane in the Tarzan stories.&nbsp;&nbsp;Yes, my last name really is faculty.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I am named after Jane in the Tarzan stories.&nbsp;&nbsp;Yes, my last name really is faculty.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -317,9 +317,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I study apes, of course.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I study apes, of course.')</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -402,9 +401,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I teach apes how to communicate with humans.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I teach apes how to communicate with humans.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -432,9 +431,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>I travel the world teaching apes how to communicate with humans.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('I travel the world teaching apes how to communicate with humans.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -697,9 +696,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>222222</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('222222')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -727,9 +726,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>3333333</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('3333333')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -757,9 +756,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>African Apes</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('African Apes')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -878,9 +877,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>ABC121212</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('ABC121212')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
