--- a/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
@@ -585,9 +585,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>Eddie is able to edit.</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('Eddie is able to edit.')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
