--- a/utilities/acceptance-tests/suites/SelfEditing/AddSelfEditorId2.html
+++ b/utilities/acceptance-tests/suites/SelfEditing/AddSelfEditorId2.html
@@ -107,9 +107,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>tinymce</td>
-	<td>JaneFaculty@cornell.edu</td>
+	<td>runScript</td>
+	<td>tinyMCE.activeEditor.setContent('JaneFaculty@cornell.edu')</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
