Tweaks to the Selenium tests

--- a/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
+++ b/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
@@ -1249,7 +1249,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document Part for Nintendo O.K. for Kids</td>
+	<td>Select an existing document for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
 <tr>
@@ -1983,7 +1983,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing (Instrument or Service or Reagent or Research Project or Biological Specimen or Software or Database) for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2023,7 +2023,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing (Instrument or Service or Reagent or Research Project or Biological Specimen or Software or Database) for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2079,7 +2079,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing Global Citation Count for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2119,7 +2119,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing Global Citation Count for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2170,7 +2170,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing Event for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2230,7 +2230,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing Event for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2301,7 +2301,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyTextNotPresent</td>
 	<td>Select an existing Process for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
@@ -2363,7 +2363,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
+	<td>Select an existing document for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
 <tr>
@@ -2398,7 +2398,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
+	<td>Select an existing document for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
 <tr>
@@ -2469,7 +2469,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Select an existing Document for Nintendo O.K. for Kids</td>
+	<td>Select an existing document for Nintendo O.K. for Kids</td>
 	<td></td>
 </tr>
 <tr>
