--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
@@ -261,6 +261,11 @@
 	<td>Nintendo: Good or Bad for Kids?</td>
 	<td></td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
 <!--Navigate to Frank Furter-->
 <tr>
 	<td>clickAndWait</td>
