--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddTestFaculty.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddTestFaculty.html
@@ -132,6 +132,11 @@
 	<td>Furter, Frank</td>
 	<td></td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
 <!--Verify new faculty member added-->
 <tr>
 	<td>verifyTextPresent</td>
