Continued WebDriver work in progress

--- a/legacy/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
+++ b/legacy/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
@@ -719,6 +719,7 @@
 	<td>id=object</td>
 	<td>${KEY_DOWN}</td>
 </tr>
+<!-- Reached here -->
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
